<resources>
    <string name="title_activity_iqtoggle">IQToggle Activity</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_android_wear_notification_needs_update_text"><g id="app_name">%1$s</g> requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text"><g id="app_name">%1$s</g>" won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text"><g id="app_name">%1$s</g> requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text"><g id="app_name">%1$s</g>" won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by <g id="app_name">%1$s</g></string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone"><g id="app_name">%1$s</g>" won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet"><g id="app_name">%1$s</g>" won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text"><g id="app_name">%1$s</g> relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text"><g id="app_name">%1$s</g>" won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text"><g id="app_name">%1$s</g>" won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="apptentive_about_description">Apptentive is a feedback and communication service which allows the people who make this app to quickly get your feedback and better listen to you.</string>
    <string name="apptentive_about_description_link">Find out more at apptentive.com</string>
    <string name="apptentive_about_privacy">"Your feedback is hosted by Apptentive and is subject to Apptentive's privacy policy and the privacy policy of the developer of this app."</string>
    <string name="apptentive_about_privacy_link">"Visit Apptentive's Privacy Policy"</string>
    <string name="apptentive_about_title">About Apptentive</string>
    <string name="apptentive_developer">Developer</string>
    <string name="apptentive_dialog_email_validation_failed_body">Please enter a valid email address.</string>
    <string name="apptentive_dialog_email_validation_failed_title">Invalid Email Address</string>
    <string name="apptentive_do_you_love_this_app">Do you love %s?</string>
    <string name="apptentive_edittext_hint_email">Your Email Address</string>
    <string name="apptentive_edittext_hint_email_required">Email Address (required)</string>
    <string name="apptentive_give_feedback">Give Feedback</string>
    <string name="apptentive_intro_dialog_body">Please let us know how to make %s better for you!</string>
    <string name="apptentive_intro_dialog_edittext_hint">Tell us how we can help. (required)</string>
    <string name="apptentive_intro_dialog_title_default">Thanks for your feedback!</string>
    <string name="apptentive_intro_dialog_title_no_love">@string/apptentive_were_sorry</string>
    <string name="apptentive_message_auto_body_manual">This is our Message Center. If you have questions, suggestions, concerns, or just want to get in touch, please send us a message. We love talking with our customers!</string>
    <string name="apptentive_message_auto_body_no_love">What can we do to ensure that you love our app? We appreciate your constructive feedback.</string>
    <string name="apptentive_message_center_attachment_title">Send image?</string>
    <string name="apptentive_message_center_compose_hint">Type a message…</string>
    <string name="apptentive_message_center_title">Message Center</string>
    <string name="apptentive_message_sent_timestamp_format">MMM dd, yyyy h:mma</string>
    <string name="apptentive_no">No</string>
    <string name="apptentive_no_thanks">No thanks</string>
    <string name="apptentive_ok">OK</string>
    <string name="apptentive_oops">Oops!</string>
    <string name="apptentive_optional">Optional</string>
    <string name="apptentive_powered_by_apptentive">Powered by Apptentive</string>
    <string name="apptentive_rate_this_app">Rate %s</string>
    <string name="apptentive_rating_error">"We're unable to find this app in the store. Please visit the store to find and rate it."</string>
    <string name="apptentive_rating_message_fs">"We're so happy to hear that you love %s! It'd be really helpful if you rated us. Thanks so much for spending some time with us."</string>
    <string name="apptentive_rating_provider_no_amazon_appstore">Amazon Appstore was not found. Please install Amazon Appstore before rating this app.</string>
    <string name="apptentive_rating_provider_no_google_play">Google Play was not found. Please install Google Play before rating this app.</string>
    <string name="apptentive_rating_provider_no_mikandi">MiKandi Market was not found. Please install MiKandi Market before rating this app.</string>
    <string name="apptentive_rating_remind">Remind Me Later</string>
    <string name="apptentive_required">Required</string>
    <string name="apptentive_send">Send</string>
    <string name="apptentive_sending">Sending…</string>
    <string name="apptentive_skip">Skip</string>
    <string name="apptentive_survey_header">Survey</string>
    <string name="apptentive_survey_send_response">SEND FEEDBACK</string>
    <string name="apptentive_survey_singleline_hint">Text</string>
    <string name="apptentive_thank_you">Thank You</string>
    <string name="apptentive_thank_you_dialog_body">"Your response has been saved in the Message Center, where you'll be able to view replies and send us other messages."</string>
    <string name="apptentive_thank_you_dialog_body_message_center_disabled">Thank you for your feedback!</string>
    <string name="apptentive_thank_you_dialog_body_message_center_disabled_email_required">"We'll be in touch via email."</string>
    <string name="apptentive_thank_you_dialog_close">Close</string>
    <string name="apptentive_thank_you_dialog_view_messages">View Messages</string>
    <string name="apptentive_thanks">Thanks!</string>
    <string name="apptentive_version">Apptentive Version %s</string>
    <string name="apptentive_were_sorry">"We're Sorry!"</string>
    <string name="apptentive_yes">Yes</string>
    <string name="apptentive_you">You</string>
    <string name="about">About T-Mobile</string>
    <string name="about_app_title">T-Mobile for Android</string>
    <string name="about_version">Version</string>
    <string name="about_whats_new">"View What's New"</string>
    <string name="accept_btn">Accept</string>
    <string name="acceptance_general_info">T-Mobile Customer Care would like to make a change to your device, please review the following:</string>
    <string name="account_sync_test_description">Checking accounts that are automatically synced</string>
    <string name="account_sync_test_label">Account Sync</string>
    <string name="accounts_sync_enable_option">Account Sync</string>
    <string name="agree">Agree</string>
    <string name="decline_btn">Decline</string>
    <string name="diagnostics_description">"As part of our commitment to delivering the best network quality and device experience possible, this device is equipped with diagnostic software. &lt;br />&lt;br />Consistent with T-Mobile's &lt;a href=http://www.t-mobile.com/company/website/privacypolicy.aspx>&lt;b>privacy policy&lt;/b>&lt;/a>, this software collects diagnostics data so that &lt;br />T-Mobile can better troubleshoot technical issues with your device or service. &lt;br />&lt;br />Diagnostic data transmissions are free of charge and do not count toward your T-Mobile data usage. &lt;br />&lt;br />&lt;b>The software does not capture the content of your calls or messages.&lt;/b>"</string>
    <string name="diagnostics_description_title">Device Data Collection</string>
    <string name="more_info_btn">More Info</string>
    <string name="next_btn">Next</string>
</resources>